--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@typescript-eslint/parser": "^3.9.0",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "graphql-constraint-directive": "^2.0.3",
     "mocha": "^8.1.1",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
